--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="Сайт-визитка Anna Cutevil">
+	<meta name="description" content="Топ 5 мотоциклов для города от Cutevil">
 	<meta name="viewport" content="width=device-width">
 	<title>MOTOCYCLES</title>
 
